Add deny button animation

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="valentine-container fade-in">
-        <h1 class="text-appear">Would you be my special one?</h1>
+        <h1 class="text-appear">Will you be my Valentine? 🌹</h1>
         <div class="button-group">
             <button class="btn-accept pulse" onclick="handleLoveYes()">Absolutely!</button>
             <button class="btn-deny wobble" onclick="handleLoveNo()">No way!</button>
         </div>
         <div class="image-container zoom-effect">
-            <img src="" alt="Romantic GIF">
+            <img src="" loading="lazy">
         </div>
     </div>
     <script src="main.js"></script>
