--- a/confirm.html
+++ b/confirm.html
@@ -10,7 +10,7 @@
     <div class="yes-container fade-in">
         <h1 class="header-text bounce-in">I knew you would say yes! ❤️</h1>
         <div class="gif-container">
-            <img src="" alt="Happy GIF" loading="lazy">
+            <img src="cat-kiss.gif" alt="Happy GIF" loading="lazy">
         </div>
     </div>
 </body>
