--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="btn-deny wobble" onclick="handleLoveNo()">No way!</button>
         </div>
         <div class="image-container zoom-effect">
-            <img src="" loading="lazy">
+            <img src="cat-rose.gif" loading="lazy">
         </div>
     </div>
     <script src="main.js"></script>
